---
source: compiler-core/src/erlang/tests/records.rs
expression: "pub record Thing {\n  Thing(a: Int, b: Int)\n}\n\npub fn identity(x) { x }\n\npub fn main() {\n  let thing = Thing(1, 2)\n  Thing(..thing |> identity, b: 1000)\n}"
---
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([identity/1, main/0]).
-export_type([thing/0]).

-type thing() :: {thing, integer(), integer()}.

-file("/root/project/test/my/mod.rakun", 5).
-spec identity(I) -> I.
identity(X) ->
    X.

-file("/root/project/test/my/mod.rakun", 7).
-spec main() -> thing().
main() ->
    Thing = {thing, 1, 2},
    erlang:setelement(
        3,
        begin
            _pipe = Thing,
            identity(_pipe)
        end,
        1000
    ).
